--- a/BewasModUpdater/BewasModUpdater.csproj
+++ b/BewasModUpdater/BewasModUpdater.csproj
@@ -2,25 +2,31 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net9.0-windows</TargetFramework>
-        <RootNamespace>BewasModSync.SyncClient</RootNamespace>
+        <RootNamespace>BewasModSync.Updater</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <AssemblyName>BewasModSync</AssemblyName>
+        <AssemblyName>BewasModUpdater</AssemblyName>
         <Version>1.0.0</Version>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
-    </PropertyGroup>
-
-    <PropertyGroup>
-        <OutputPath>..\dist\SyncClient\</OutputPath>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-        <DebugType>none</DebugType>
-        <DebugSymbols>false</DebugSymbols>
+        
+        <!-- Single file exe configuration -->
         <PublishSingleFile>true</PublishSingleFile>
         <SelfContained>true</SelfContained>
         <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+        <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+        <IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
+        <EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
+        
+        <!-- Clean output -->
+        <DebugType>none</DebugType>
+        <DebugSymbols>false</DebugSymbols>
+    </PropertyGroup>
+
+    <!-- Build to bin folder, publish to dist -->
+    <PropertyGroup>
+        <OutputPath>bin\$(Configuration)\</OutputPath>
+        <PublishDir>..\dist\</PublishDir>
     </PropertyGroup>
 
     <ItemGroup>
